--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <meta
       name="description"
-      content="Antonio Ayola Portafolio, Proyectos y Blog"
+      content="Jairo Melo Portafolio"
     />
     <link
       rel="shortcut icon"
@@ -19,7 +19,7 @@
     <meta name="robots" content="index, follow" />
     <meta
       name="keywords"
-      content="Antonio Ayola, Potafolio, Portfolio, Developer, React"
+      content="Jairo Melo, Portafolio"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,10 +30,10 @@
     />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Antonio Ayola Portafolio" />
+    <meta property="og:title" content="Jairo Melo Portafolio" />
     <meta
       property="og:description"
-      content="Antonio Ayola Portafolio, Proyectos y Blog"
+      content="Jairo Melo Portafolio"
     />
     <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
     <meta property="og:url" content="https://antonioayola.netlify.app/" />
@@ -41,10 +41,10 @@
     <meta name="twitter:card" content="%PUBLIC_URL%/logo192.png" />
     <meta property="twitter:domain" content="antonioayola.netlify.app" />
     <meta property="twitter:url" content="https://antonioayola.netlify.app/" />
-    <meta name="twitter:title" content="Antonio Ayola Portafolio" />
+    <meta name="twitter:title" content="Jairo Melo Portafolio" />
     <meta
       name="twitter:description"
-      content="Antonio Ayola Portafolio, Proyectos y Blog"
+      content="Jairo Melo Portafolio"
     />
     <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
 
@@ -66,7 +66,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Antonio Ayola Portafolio | Frontend Developer</title>
+    <title>Jairo Melo Portafolio</title>
   </head>
 
   <body>
